--- a/bzl/docs/performance.adoc
+++ b/bzl/docs/performance.adoc
@@ -1,42 +1,195 @@
 = performance
 
-Some informal measurements.
+Some informal measurements. Note that Bazel always keeps track of
+"Elapsed time".
 
+Machines:
 
+* mac: macbook pro, 2.4 GHz 8-Core Intel Core i9; memory: 64 GB 2667
+  MHz DDR4; macos: 13.0.1 (22A400)
 
+* linux: Google cloud compute engine, 16 cpu (Xeon@ 2.30GHz), 60GB mem
 
+== tests
 
+Run all supported tests (`bazel test testsuite/tests`).
 
-== test protocol
-
-`//test:ocamlopt.opt`  (with unarchived libs)
+==== macos
 
 ----
-$ bazel clean
-$ /usr/bin/time bazel build test:ocamlopt.opt
+$ /usr/bin/time bazel test testsuite/tests
 ...
-Target //test:ocamlopt.opt up-to-date:
-  bazel-bin/test/_test_ss/ocamlopt.opt
-INFO: Elapsed time: 27.719s, Critical Path: 20.39s
-INFO: 928 processes: 460 internal, 468 darwin-sandbox.
-INFO: Build completed successfully, 928 total actions
-       27.75 real         0.04 user         0.06 sys
+INFO: Elapsed time: 161.693s, Critical Path: 121.02s
+INFO: 9462 processes: 4564 internal, 4898 darwin-sandbox.
+INFO: Build completed, 1 test FAILED, 9462 total actions
+//testsuite/tests/basic:Arrays_ss_test                                   PASSED in 0.8s
+//testsuite/tests/basic:Arrays_sv_test                                   PASSED in 0.3s
+//testsuite/tests/basic:Arrays_vs_test                                   PASSED in 0.7s
+//testsuite/tests/basic:Arrays_vv_test                                   PASSED in 0.2s
+//testsuite/tests/basic:Bigints_ss_test                                  PASSED in 1.1s
+...
+//testsuite/tests/lib-bigarray:Pr5115_vv_test                            PASSED in 0.3s
+//testsuite/tests/lib-bigarray:Weak_bigarray_ss_test                     PASSED in 0.5s
+//testsuite/tests/lib-bigarray:Weak_bigarray_sv_test                     PASSED in 0.3s
+//testsuite/tests/lib-bigarray:Weak_bigarray_vs_test                     PASSED in 0.5s
+//testsuite/tests/lib-bigarray:Weak_bigarray_vv_test                     PASSED in 0.3s
+//testsuite/tests/basic-modules:anonymous_test                           FAILED in 0.2s
+Executed 174 out of 174 tests: 173 tests pass and 1 fails locally.
+      161.77 real         0.07 user         0.08 sys
 ----
-again:
-INFO: Elapsed time: 25.985s, Critical Path: 21.81s
-       26.02 real         0.04 user         0.06 sys
 
-Same with archived compiler libs:
+==== linux
+
+----
+$ time bazel test testsuite/tests
+INFO: Elapsed time: 96.982s, Critical Path: 83.20s
+INFO: 9438 processes: 4547 internal, 4891 linux-sandbox.
+INFO: Build completed, 1 test FAILED, 9438 total actions
+... stdout same as for mac ...
+Executed 174 out of 174 tests: 173 tests pass and 1 fails locally.
+
+real    1m37.073s
+user    0m0.079s
+sys     0m0.061s
+
+----
+
+
+== compiler builds
+
+=== clean build: ocamlopt.opt
+
+After running `bazel clean`:
+
+==== macos
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt
+INFO: Analyzed target //test:ocamlopt.opt (96 packages loaded, 3291 targets configured).
+INFO: Found 1 target...
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 37.823s, Critical Path: 29.03s
+INFO: 1829 processes: 884 internal, 945 darwin-sandbox.
+INFO: Build completed successfully, 1829 total actions
+       37.86 real         0.03 user         0.04 sys
+----
+
+Same target, with lib archiving enabled:
 
 ----
 $ /usr/bin/time bazel build test:ocamlopt.opt --//config/ocaml/compiler/libs:archived
+INFO: Analyzed target //test:ocamlopt.opt (96 packages loaded, 3291 targets configured).
+INFO: Found 1 target...
 Target //test:ocamlopt.opt up-to-date:
-  bazel-bin/test/_test_ss/ocamlopt.opt
-INFO: Elapsed time: 26.475s, Critical Path: 20.59s
-INFO: 931 processes: 460 internal, 471 darwin-sandbox.
-INFO: Build completed successfully, 931 total actions
-       26.50 real         0.04 user         0.06 sys
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 35.299s, Critical Path: 26.96s
+INFO: 1896 processes: 915 internal, 981 darwin-sandbox.
+INFO: Build completed successfully, 1896 total actions
+       35.34 real         0.03 user         0.04 sys
 ----
-again:
-INFO: Elapsed time: 27.004s, Critical Path: 19.80s
-       27.03 real         0.04 user         0.06 sys
+
+
+=== linux
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt
+INFO: Analyzed target //test:ocamlopt.opt (95 packages loaded, 2750 targets configured).
+INFO: Found 1 target...
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 14.809s, Critical Path: 12.34s
+INFO: 1819 processes: 877 internal, 942 linux-sandbox.
+INFO: Build completed successfully, 1819 total actions
+0.01user 0.01system 0:14.82elapsed 0%CPU (0avgtext+0avgdata 9132maxresident)k
+0inputs+16outputs (0major+763minor)pagefaults 0swaps
+----
+
+Same with lib archiving:
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt --//config/ocaml/compiler/libs:archived
+INFO: Analyzed target //test:ocamlopt.opt (95 packages loaded, 2750 targets configured).
+INFO: Found 1 target...
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 14.416s, Critical Path: 12.39s
+INFO: 1886 processes: 908 internal, 978 linux-sandbox.
+INFO: Build completed successfully, 1886 total actions
+0.01user 0.01system 0:14.43elapsed 0%CPU (0avgtext+0avgdata 9112maxresident)k
+0inputs+16outputs (0major+793minor)pagefaults 0swaps
+----
+
+=== incremental build: ocamlopt.opt
+
+After running a clean build and adding the following to `//asmcomp/asmgen.ml`:
+
+----
+[@@@warning "-32"]
+let x = 9
+[@@@warning "+32"]
+----
+
+NOTE: From the above it looks like building with archived libs is
+faster, but in this case, an incremental build, it seems to be a little slower.
+
+==== macos
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt
+INFO: Analyzed target //test:ocamlopt.opt (0 packages loaded, 0 targets configured).
+INFO: Found 1 target...
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 1.293s, Critical Path: 1.15s
+INFO: 4 processes: 2 internal, 2 darwin-sandbox.
+INFO: Build completed successfully, 4 total actions
+        1.32 real         0.02 user         0.02 sys
+----
+
+With lib archiving:
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt --//config/ocaml/compiler/libs:archived
+INFO: Analyzed target //test:ocamlopt.opt (0 packages loaded, 0 targets configured).
+INFO: Found 1 target...
+ checking cached actions
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 1.643s, Critical Path: 1.48s
+INFO: 5 processes: 2 internal, 3 darwin-sandbox.
+INFO: Build completed successfully, 5 total actions
+        1.67 real         0.01 user         0.02 sys
+----
+
+==== linux
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt
+INFO: Analyzed target //test:ocamlopt.opt (0 packages loaded, 0 targets configured).
+INFO: Found 1 target...
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 0.866s, Critical Path: 0.74s
+INFO: 4 processes: 2 internal, 2 linux-sandbox.
+INFO: Build completed successfully, 4 total actions
+0.01user 0.00system 0:00.87elapsed 1%CPU (0avgtext+0avgdata 8988maxresident)k
+0inputs+16outputs (0major+783minor)pagefaults 0swaps
+----
+
+With archived libs:
+
+----
+$ /usr/bin/time bazel build test:ocamlopt.opt --//config/ocaml/compiler/libs:archived
+INFO: Analyzed target //test:ocamlopt.opt (0 packages loaded, 0 targets configured).
+INFO: Found 1 target...
+Target //test:ocamlopt.opt up-to-date:
+  bazel-bin/test/bin_ss/ocamlopt.opt
+INFO: Elapsed time: 1.095s, Critical Path: 0.92s
+INFO: 5 processes: 2 internal, 3 linux-sandbox.
+INFO: Build completed successfully, 5 total actions
+0.01user 0.00system 0:01.11elapsed 1%CPU (0avgtext+0avgdata 9072maxresident)k
+0inputs+16outputs (0major+771minor)pagefaults 0swaps
+----
+
+
